# OpenGL-CMake

./: CMakeLists.txt  README.md
include/glad/: glad.h
lib/: glad.c
